--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
         <module>kyuubi-util</module>
         <module>kyuubi-util-scala</module>
         <module>kyuubi-zookeeper</module>
+        <module>extensions/spark/kyuubi-spark-connector-yarn</module>
     </modules>
 
     <scm>
